<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".ui.activity.FormProductActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:layout_marginBottom="?android:attr/actionBarSize">

        <EditText
            android:id="@+id/form_product_name_edit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:autofillHints="name"
            android:inputType="text"
            android:hint="@string/type_a_name"/>

        <EditText
            android:id="@+id/form_product_description_edit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/form_product_name_edit"
            app:layout_constraintEnd_toEndOf="@id/form_product_name_edit"
            app:layout_constraintTop_toBottomOf="@+id/form_product_name_edit"
            android:autofillHints="description"
            android:inputType="text"
            android:hint="@string/type_a_description_for_product"/>

        <EditText
            android:id="@+id/form_product_price_edit"
            android:layout_width="0dp"
            android:layout_height="48dp"
            app:layout_constraintStart_toStartOf="@id/form_product_description_edit"
            app:layout_constraintEnd_toEndOf="@id/form_product_description_edit"
            app:layout_constraintTop_toBottomOf="@+id/form_product_description_edit"
            android:autofillHints="price"
            android:inputType="numberDecimal"
            android:hint="@string/type_a_price_for_the_product"/>

        <Button
            android:id="@+id/form_product_save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:text="@string/save"
            app:layout_constraintVertical_bias="1"
            app:layout_constraintTop_toBottomOf="@+id/form_product_price_edit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
